Adding movie detail page, router and improved the ui a little, adding a loader, debouncer and some other usefull things

--- a/src/components/homePage/discoverMovies/rateFilter/rateFilter.scss
+++ b/src/components/homePage/discoverMovies/rateFilter/rateFilter.scss
@@ -1,3 +1,10 @@
-.star {
-  cursor: pointer;
+.rate-filter {
+  display: flex;
+  padding: 20px 0;
+  p {
+    margin: 2px 0 5px 0;
+  }
+  .star {
+    cursor: pointer;
+  }
 }
