--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,12 @@ body {
   flex-direction: column;
 
   > header {
-    height: 100px;
+    height: 50px;
+    background-color: #888888;
+    padding: 20px;
+    h1 {
+      margin: 0;
+    }
   }
 
   > main {
