--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,12 @@ body {
     height: 50px;
     background-color: #888888;
     padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    .git-hub-logo {
+      height: 32px;
+      width: 32px;
+    }
     h1 {
       margin: 0;
     }
